--- a/index.html
+++ b/index.html
@@ -5,32 +5,46 @@
     <meta charset="UTF-8">
     <title>Assignment Task 01</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-    <nav class="navbar">
-        <div class="logo">LOGO</div>
-        <button class="btn">Sign Up</button>
-    </nav>
-    <div class="hero">
-        <h1 class="hero-title">
-            Cool Dark UI Template for<br>Webflow Agencies!
-        </h1>
-        <button class="btn cta">Stay Focused</button>
-
-    </div>
-        
+        <nav class="navbar">
+            <div class="logo">LOGO</div>
+            <button class="btn sing">Sign Up</button>
+        </nav>
+        <div class="hero">
+            <h1 class="hero-title">
+                Cool Dark UI Template for<br>Webflow Agencies!
+            </h1>
+            <button class="btn cta">Stay Focused</button>
+        </div>
 
     </header>
     <main>
+        <div class="action">
+            <div class="action-content">
+                <h2 class="action-title">See It in Action </h2>
+                <p class="action-text">This is an example of an action section where you can place important information
+                    or call to action.</p>
+                <button class="btn action-btn">Launch Action Preview</button>
+            </div>
+            <div class="action-image">
+                <img src="images/wc-mini.png" alt="Action Preview Image">
+
+            </div>
+        </div>
+
+        </div>
 
     </main>
-<footer>
+    <footer>
 
-</footer>
+    </footer>
 
 </body>
 
