User section added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,27 @@
             </div>
         </div>
 
+        <div class="user">
+            <h2 class="users-title">Joind Thousands of Productive Users</h2>
+            <div class=users>
+                <div>
+                    <h3>50k</h3>
+                <p class="user-type">Active Users</p>
+            </div>
+                <div>
+                    <h3>2M+</h3>
+                <p class="user-type">Focus Sessions</p>
+            </div>
+                <div>
+                    <h3>95%</h3>
+                <p class="user-type">Satisfaction Rate</p>
+            </div>
+                
+            
+            </div>
+
         </div>
+
 
     </main>
     <footer>
