--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a8fe43f0f0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -44,26 +45,82 @@
             <div class=users>
                 <div>
                     <h3>50k</h3>
-                <p class="user-type">Active Users</p>
-            </div>
+                    <p class="user-type">Active Users</p>
+                </div>
                 <div>
                     <h3>2M+</h3>
-                <p class="user-type">Focus Sessions</p>
-            </div>
+                    <p class="user-type">Focus Sessions</p>
+                </div>
                 <div>
                     <h3>95%</h3>
-                <p class="user-type">Satisfaction Rate</p>
+                    <p class="user-type">Satisfaction Rate</p>
+                </div>
             </div>
-                
-            
-            </div>
-
         </div>
+
+        <section class="reviews-section">
+            <h1>What our users say</h1>
+            <div class="reviews">
+                <div class="review-card">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h2>Loved by Designers</h2>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="review-footer">
+                        <img class="avatar" src="images/avatar.png" alt="Reviewer" />
+                        <div class="reviewer-info">
+                            <span>Reviewer name</span>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews">
+                    <div class="review-card">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h2>Loved by Designers</h2>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <div class="review-footer">
+                            <img class="avatar" src="images/avatar.png" alt="Reviewer" />
+                            <div class="reviewer-info">
+                                <span>Reviewer name</span>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reviews">
+                        <div class="review-card">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <h2>Loved by Designers</h2>
+                            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                            <div class="review-footer">
+                                <img class="avatar" src="images/avatar.png" alt="Reviewer" />
+                                <div class="reviewer-info">
+                                    <span>Reviewer name</span>
+                                    <p>Date</p>
+                                </div>
+                            </div>
+                        </div>
 
 
     </main>
     <footer>
-
     </footer>
 
 </body>
