--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             </div>
             <div class="action-image">
                 <img src="images/wc-mini.png" alt="Action Preview Image">
-
             </div>
         </div>
 
@@ -58,7 +57,7 @@
             </div>
         </div>
 
-        <section class="reviews-section">
+        <div class="reviews-section">
             <h1>What our users say</h1>
             <div class="reviews">
                 <div class="review-card">
@@ -118,11 +117,28 @@
                             </div>
                         </div>
 
-
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="touch">
+            <div class="touch-title">Let's Get in Touch</div>
+            <div class="contact-form">
+                <form>
+                    <label for="email"><p>Email</p></label>
+                    <input type="email" id="email" placeholder="example@gmail.com" required>
+                    <label for="" id="name"><p>Name</p></label>
+                    <input type="text" id="name" placeholder="Full name" required>
+                    <label for="message"><p>Message</p></label>
+                    <p></p><textarea name="" id="massege" cols="30" rows="8" placeholder="write your massege..."></textarea>
+                    <button type="submit" class="btn submit-btn">Get in Touch</button>
+                </form>
+            </div>
+        </div>
     </main>
-    <footer>
-    </footer>
-
+<footer>    
+    
+</footer>
 </body>
 
 </html>
