--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Assignment Task 01</title>
+    <title>MotionPeak (A01)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">LOGO</div>
+            <div class="logo"> <a href="">Motion<span>Peak</span></a></div>
             <button class="btn sing">Sign Up</button>
         </nav>
         <div class="hero">
@@ -69,12 +69,12 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <h2>Loved by Designers</h2>
-                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <p>“Our site finally matches the quality of our work.” – Studio Vertex</p>
                     <div class="review-footer">
                         <img class="avatar" src="images/avatar.png" alt="Reviewer" />
                         <div class="reviewer-info">
-                            <span>Reviewer name</span>
-                            <p>Date</p>
+                            <span>Nadia Rahman</span>
+                            <p>11 june 2025</p>
                         </div>
                     </div>
                 </div>
@@ -88,12 +88,12 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <h2>Loved by Designers</h2>
-                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <p>“This template gave our brand the polish it needed.” – Pixel North</p>
                         <div class="review-footer">
                             <img class="avatar" src="images/avatar.png" alt="Reviewer" />
                             <div class="reviewer-info">
-                                <span>Reviewer name</span>
-                                <p>Date</p>
+                                <span>Jason Lee</span>
+                                <p>11 june 2025</p>
                             </div>
                         </div>
                     </div>
@@ -107,12 +107,12 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <h2>Loved by Designers</h2>
-                            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                            <p>“A game-changer for our agency’s online image.” –Craftwell Co.</p>
                             <div class="review-footer">
                                 <img class="avatar" src="images/avatar.png" alt="Reviewer" />
                                 <div class="reviewer-info">
-                                    <span>Reviewer name</span>
-                                    <p>Date</p>
+                                    <span>Amira Collins</span>
+                                    <p>11 june 2025</p>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +137,14 @@
         </div>
     </main>
 <footer>    
-    
+    <div class="footer-logo"> <a href="#">Motion<span>Peak</span></a></div>
+    <p class="footer-text">Ready to elevate your online presence? Contact us today to discuss <br>
+your project and discover how we can bring your vision to life..</p>
+    <div class="footer-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">How it Works</a>
+        <a href="#">Services</a>
 </footer>
 </body>
 
