--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         <div class="hero">
             <h1 class="hero-title">
-                Cool Dark UI Template for<br>Webflow Agencies!
+                Cool Dark UI Template for <br> Webflow Agencies!
             </h1>
             <button class="btn cta">Stay Focused</button>
         </div>
@@ -30,8 +30,7 @@
         <div class="action">
             <div class="action-content">
                 <h2 class="action-title">See It in Action </h2>
-                <p class="action-text">This is an example of an action section where you can place important information
-                    or call to action.</p>
+                <p class="action-text">Experience the power of a clean, focused layout built for conversions.</p>
                 <button class="btn action-btn">Launch Action Preview</button>
             </div>
             <div class="action-image">
@@ -125,27 +124,34 @@
             <div class="touch-title">Let's Get in Touch</div>
             <div class="contact-form">
                 <form>
-                    <label for="email"><p>Email</p></label>
+                    <label for="email">
+                        <p>Email</p>
+                    </label>
                     <input type="email" id="email" placeholder="example@gmail.com" required>
-                    <label for="" id="name"><p>Name</p></label>
+                    <label for="" id="name">
+                        <p>Name</p>
+                    </label>
                     <input type="text" id="name" placeholder="Full name" required>
-                    <label for="message"><p>Message</p></label>
-                    <p></p><textarea name="" id="massege" cols="30" rows="8" placeholder="write your massege..."></textarea>
+                    <label for="message">
+                        <p>Message</p>
+                    </label>
+                    <p></p><textarea name="" id="massege" cols="30" rows="8"
+                        placeholder="write your massege..."></textarea>
                     <button type="submit" class="btn submit-btn">Get in Touch</button>
                 </form>
             </div>
         </div>
     </main>
-<footer>    
-    <div class="footer-logo"> <a href="#">Motion<span>Peak</span></a></div>
-    <p class="footer-text">Ready to elevate your online presence? Contact us today to discuss <br>
-your project and discover how we can bring your vision to life..</p>
-    <div class="footer-links">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">How it Works</a>
-        <a href="#">Services</a>
-</footer>
+    <footer>
+        <div class="footer-logo"> <a href="#">Motion<span>Peak</span></a></div>
+        <p class="footer-text">Ready to elevate your online presence? Contact us today to discuss <br>
+            your project and discover how we can bring your vision to life..</p>
+        <div class="footer-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">How it Works</a>
+            <a href="#">Services</a>
+    </footer>
 </body>
 
 </html>
